# land-pricing

./: .dockerignore  Dockerfile  Fin_plsplspls.py  LICENSE  NEWmethod1.py  NEWmethod2.py  README.md  csv-table-process.py  docker-compose.yml  dockerfile  gunicorn.conf.py  igr_scraper.py  index2-word_converter.py  landPricingDocumentation.docx  landPricingTool_costAnalysis.docx  main.py  method1.py  method2.py  notes.txt  playwright_htmlScraper.py  probe_igr_table.py  pyproject.toml  render.yaml  requirements.txt  test_ocr.py
index2/: 11Notification-new-majivade-extended.docx  11Notification-old.docx  format.docx  instructions.txt  new_index2 output.docx
templates/: index.html  login.html
testDocs/: section 26.docx
