[project]
name = "land-pricinggom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "deep-translator>=1.11.4",
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "pandas>=2.3.2",
    "psutil>=7.0.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
]
