[project]
name = "land-pricinggom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "deep-translator>=1.11.4",
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "pandas>=2.3.2",
    "playwright>=1.55.0",
    "psutil>=7.0.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "python-doctr[torch]>=0.7.0",
    "opencv-python>=4.8.0",
    "matplotlib>=3.7.0",
    "google-generativeai>=0.8.5",
]
